--- a/R/Offshore CPUE analysis v2018 SC.Rmd
+++ b/R/Offshore CPUE analysis v2018 SC.Rmd
@@ -868,7 +868,7 @@ t <-
   filter(assessmentyear == 2018) %>% 
   mutate(fleet = "Offshore") %>% 
   bind_rows(
-    read_excel(path="D:/SPRFMO/data/SPRFMO 2018 China template_SURVEY.xls",
+    read_excel(path="D:/SPRFMO/data/SPRFM 2018 China template_SURVEY.xls",
            sheet="CPUE fleet 4",
            range="A41:B70", 
            col_names=FALSE) %>% 
@@ -940,12 +940,15 @@ upr       <- exp(pred$fit + (1.96 * pred$se.fit))
 lwr       <- exp(pred$fit - (1.96 * pred$se.fit))
 
 # create table
-data.frame(year = fy:ly,
+df <-
+  data.frame(year = fy:ly,
            cpue = exp(pred$fit),
            upr  = upr, 
            lwr  = lwr,
            stringsAsFactors = FALSE) %>% 
-  mutate_at(c("cpue","upr","lwr"), funs(as.integer)) %>% 
+  mutate_at(c("cpue","upr","lwr"), funs(as.integer)) 
+
+df %>% 
   pandoc.table(., 
                style        = "simple",
                split.tables = 100, 
@@ -955,6 +958,11 @@ data.frame(year = fy:ly,
                big.mark     = '', 
                round        = c(0,1,1,1,1,1,0,0,0,1,0,0,0,0,0,0,0,0,0,0))
 
+# save to csv
+df %>% 
+  mutate(assessmentyear = 2018) %>% 
+  write.csv(file=paste0("Offshore fleet standardized CPUE ",min(df$year),"-",max(df$year),".csv"), 
+            row.names = FALSE)
 
 ```
 
